--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -32,7 +32,7 @@
                     <% if(editing){ %>
                         <input type="hidden" value="<%= product._id %>" name="productId">
                         <% } %>
-
+                            <input type="hidden" value="<%= csrfToken %>" name="_csrf" id="">
                             <button class="btn <%= editing ? 'btn-update' : 'btn-add' %>" type="submit">
                                 <%= editing ? 'Update Product' : 'Add Product' %>
                             </button>
