--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -36,6 +36,7 @@
                 <% }else{ %>
                     <li class="main-header__item">
                         <form action="/logout" method="post">
+                            <input type="hidden" value="<%= csrfToken %>" name="_csrf" id="">
                             <button type="submit">Logout</button>
                         </form>
                     </li>
